Fixed z-index on drop down menu

--- a/css/style.css
+++ b/css/style.css
@@ -966,8 +966,9 @@ header:after {
   margin: -40px auto 25px;
   padding: 0 0 0 0;
   width: 780px;
-  z-index: 1001;
+  z-index: 1;
   background: transparent;
+  display: block;
 
   /* mega menu list */
   /* a top level navigation item in the mega menu */
